[gd_scene load_steps=10 format=3 uid="uid://4pbbpdmw12o7"]

[ext_resource type="Script" path="res://scenes/UI/game_over_menu/game_over_menu.gd" id="1_d3v8l"]
[ext_resource type="Theme" uid="uid://d3mnn2vdpemvj" path="res://resources/main_theme.tres" id="1_ph0sh"]
[ext_resource type="FontFile" uid="uid://420mvaqtu2k0" path="res://assets/fonts/pixel_font.ttf" id="2_bfcaa"]
[ext_resource type="Script" path="res://scenes/UI/game_over_menu/score_label.gd" id="2_fauem"]
[ext_resource type="Texture2D" uid="uid://cnc0jh2w5ldgv" path="res://assets/sprites/player/ralph-big.png" id="5_ofda3"]
[ext_resource type="Script" path="res://scenes/UI/game_over_menu/high_score_label.gd" id="5_tpoqf"]
[ext_resource type="Texture2D" uid="uid://5cry2juen66v" path="res://assets/sprites/score_bonus/Peanut-Butter-32x32.png" id="6_w2fqt"]
[ext_resource type="Texture2D" uid="uid://cvobhtyplhcnd" path="res://assets/sprites/cats/cat-brown.png" id="7_7m46w"]
[ext_resource type="Texture2D" uid="uid://cl16a1yue6yuw" path="res://assets/sprites/cats/cat-orange.png" id="7_ejopx"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ph0sh")
script = ExtResource("1_d3v8l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.156863, 0.156863, 0.180392, 1)

[node name="ButtonContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -33.0
offset_right = 54.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="PlayAgain" type="Button" parent="ButtonContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bfcaa")
text = "PLAY AGAIN?"

[node name="MarginContainer2" type="MarginContainer" parent="ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Quit" type="Button" parent="ButtonContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bfcaa")
text = "QUIT"

[node name="ScoreContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = -12.0
offset_right = 160.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_bfcaa")
text = "Score Displayed"
script = ExtResource("2_fauem")

[node name="HighScoreLabel" type="Label" parent="ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_bfcaa")
text = "High Score Displayed"
script = ExtResource("5_tpoqf")

[node name="PeanutButter" type="Sprite2D" parent="."]
position = Vector2(320, 330)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_w2fqt")

[node name="OrangeCat" type="Sprite2D" parent="."]
position = Vector2(256, 312)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_ejopx")

[node name="BrownCat" type="Sprite2D" parent="."]
position = Vector2(399, 295)
scale = Vector2(-0.9, 0.9)
texture = ExtResource("7_7m46w")

[node name="Ralph" type="Sprite2D" parent="."]
position = Vector2(320, 43)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ofda3")

[connection signal="pressed" from="ButtonContainer/VBoxContainer/MarginContainer3/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="ButtonContainer/VBoxContainer/MarginContainer2/Quit" to="." method="_on_quit_pressed"]
